# systems-performance-analysis

./: .env.docker  .env.example  .gitignore  CLAUDE.md  DASHBOARD-IMPROVEMENTS-SUMMARY.md  Dockerfile.brendan-api  LICENSE  Legends-Improvement-Summary.md  NEXT_STEPS.md  Process-Health-Explanation.md  README.md  USE-Method-Implementation-Summary.md  USE-Method-Improvements-Summary.md  USE-Method-Saturation-Fix.md  USE-Method-Unified-Summary.md  alertmanager.yml  analysis_result.json  autogen_config.json  deploy_prometheus.sh  docker-compose.yml  mock_prometheus.py  prometheus_analysis.json  prometheus_analyzer.py  prometheus_local.yml  prometheus_remote_test.json  pyproject.toml  remote_client.py  simple_server.py  simple_working_dashboard.json  test_dashboard.json  test_prometheus_remote.py  test_server.py  use_scores_20251027_191231.json  use_scores_20251027_191237.json  use_scores_20251027_191254.json  use_scores_20251027_192805.json
docker/: alert_rules.yml  docker-compose.yml  use-method-alerts-queueing.yml  use-method-alerts.yml
docs/: ADR-use-method.md  BRENDAN_GREGG_PERSONA.md  CLAUDE.md  GRAFANA_INTEGRATION.md  GRAFANA_LLM_SETUP.md  LLM_INTEGRATION_VALIDATION.md  README.md  REFACTORING_PROPOSAL.md  autogen-architecture.md  plano-acao.yaml  state.local.md  tarefa-todo.md  workflow.md
examples/: autogen_brendan_integration.py  demo_autogen.py  demo_brendan_gregg_persona.py  demo_llm_integration.py  demo_prometheus_monitoring.py  local_analyzer.py  simple_brendan_analysis.py  test_brendan_llm.py
grafana/dashboards/: Network-Detailed-Dashboard.json  USE-Method-Complete.json  USE-Method-Fixed.json  USE-Method-Simplified.json  USE-Method-Unified-Simple.json  USE-Method-Unified.json  brendan-agent-analysis.json  brendan-llm-panel.json  complete-dashboard.json  observability-three-pillars.json  os-concepts-dashboard.json  simple-dashboard.json  systematic-investigation-methodology.json  top-down-bottom-up-methodology.json  unified-use-method-dashboard.json  use-method-dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasources.yml
scripts/: add_brendan_panels.py  add_brendan_panels_v2.py  add_html_panels.py  setup-mcp.py  start_monitoring.sh  update_dashboard.py  use_method_scorer.py
src/: __init__.py  analyzers.py  autogen_agents.py  autogen_integration.py  brendan_api_server.py  brendan_gregg_cli.py  brendan_gregg_persona.py  brendan_llm_agent.py  collectors.py  main.py  remote_server.py  reporters.py  reporters_simple.py  time_series_db.py
src/application/dto/: analysis_request.py  analysis_response.py
src/application/ports/output/: llm_client.py  metrics_collector.py
src/application/use_cases/performance/: __init__.py  analyze_system.py  get_autogen_insights.py  get_insights.py  get_llm_insights.py
src/domain/ai_agent/entities/: brendan_persona.py
src/domain/ai_agent/value_objects/: llm_config.py
src/domain/performance/aggregates/: analysis_session.py
src/domain/performance/entities/: performance_insight.py  system_metrics.py
src/domain/performance/repositories/: __init__.py  insights_repository.py  metrics_repository.py
src/domain/performance/services/: bottleneck_detector.py  use_method_analyzer.py
src/domain/performance/value_objects/: metric_value.py  severity.py  threshold.py
src/infrastructure/ai/: __init__.py  autogen_multiagent.py  ollama_llm_client.py
src/infrastructure/config/: settings.py
src/infrastructure/monitoring/: psutil_collector.py
src/infrastructure/persistence/: __init__.py  file_insights_repository.py
src/presentation/api/routes/: dashboard.py  insights.py
src/presentation/api/schemas/: __init__.py  insight_schemas.py
src/presentation/api/templates/: base.html  dashboard.html  llm_dashboard.html
src/shared/: exceptions.py
tests/: test_analysis.py
tests/mocks/: autogen_mock.py
